# MorningRadio

./: .cache.sqlite  .gitignore  Morning.ipynb  README.md  app.py  gen.py  hello.py  index.html  llm.py  makefile  pyproject.toml  requirement.txt  schedule_gen.py  serve  tts.py
.ipynb_checkpoints/: Morning-checkpoint.ipynb
assets/: index.html  rss.xml
templates/: index.html
