[project]
name = "morning-radio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.0.0",
    "feedgen>=1.0.0",
    "flask>=3.1.0",
    "jupyter>=1.1.1",
    "llm>=0.19.1",
    "numpy>=2.2.2",
    "openmeteo-requests>=1.3.0",
    "pandas>=2.2.3",
    "quarto-cli>=1.6.40",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "tzlocal>=5.2",
    "yfinance>=0.2.52",
]
